--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Akhatna -->
   <div class="head">
     <h4 class="title" id="id">A TIME TABLE FOR</h4>
-    <h1>Europe Myanmar Adventist Conference</h1>
+    <h1>Europe Myanmar Adventist Conference 2023</h1>
     <h3><time><b>July 26<sup>th</sup> - 30<sup>th</sup>,
       &nbsp; 2023</b></time></h3> 
     <address>Søholtvej 10, 9750 Østervrå, Denmark</address>
