Editing font-size

--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
           <td onclick="toggleContent4()" id="jk"><u>Arriving + Registration + Dinner</u></td>
           <div border="5" class="table content" id="tableOfContents4">
             <ol>
-              <li>Arriving: "If you need to be picked up from the airport, bus stop, or station, please call the available person listed below."</li>
-                <ul>
+              <li style="font-size: 40px">Arriving: "If you need to be picked up from the airport, bus stop, or station, please call the available person listed below."</li>
+                <ul style="font-size: 40px">
                   <li>Dal     : +45....</li>
                   <li>Niang   : +4542410324</li>
                   <li>Cia Mang: +4542363455</li>
                   <li>Tun No  : +4792542164</li>
-                </ul>
-              <li>Registration place</li>
-                <ul>
+                </ul> <br><br><br>
+              <li style="font-size: 40px">Registration place</li>
+                <ul style="font-size: 40px">
                   <li>Høngårdsvej25, 9750 Østervrå</li>
-                </ul>
-              <li>Dinner: You can eat dinner whenever you arrive. "Kitchen duty for today is as follows:"
+                </ul> <br><br><br>
+              <li style="font-size: 40px">Dinner: You can eat dinner whenever you arrive. "Kitchen duty for today is as follows:"
               </li>
-                <ul>
+                <ul style="font-size: 40px">
                   <li>Ko Saw Phyo</li>
                   <li>Olivia Lian</li>
                   <li>Lianta</li>
@@ -61,7 +61,7 @@
           <td>19:00 - 21:00</td>
           <td onclick="toggleContent()" id="jk"><u>Worship</u></td>
             <div border="5" class="table content" id="tableOfContents">
-              <ol>
+              <ol style="font-size: 40px">
                 <li>Music</li>
                   <ul>
                     <li>KyawKyaw</li>
@@ -78,7 +78,7 @@
                   </ul>
                 <li>Speaker</li>
                   <ul>
-                    <li>KhamBawi</li>
+                    <li>Pr. KhamBawi</li>
                   </ul>
               </ol>
             </div>
@@ -89,7 +89,7 @@
           <td>21:00 - 06:00</td>
           <td onclick="toggleContent1()" id="jk"><u>Bed Time</u></td>
           <div border="5" class="table content" id="tableOfContents1">
-            <ol>
+            <ol style="font-size: 40px">
               <li>KKK</li>
                 <ul>
                   <li>KyawKyaw</li>
@@ -106,35 +106,25 @@
 
       </tbody>
     </table>
-    <span onclick="toggleContent2()"  id="jk"><u>
-      Cleaning Plan</u></span> 
+    <span onclick="toggleContent2()"  id="jk" style="font-size:40px"><u>
+      Cleaning Duty</u></span> 
       <div border="5" class="table content" id="tableOfContents2">
-            <ol>
-              <li>KKK</li>
+            <ol style="font-size: 40px">
+              <li>For today's cleaning, whatever it may be:</li>
                 <ul>
-                  <li>KyawKyaw</li>
-                  <li>AyeAye</li>
-                </ul>
-              <li>LLL</li>
-                <ul>
-                  <li>Naw Naw</li>
-                  <li>KaungKaung</li>
+                  <li>Any volunteers are welcome!</li>
                 </ul>
             </ol>
       </div>
-    <span onclick="toggleContent3()" id="jk"><u>
+    <span onclick="toggleContent3()" id="jk" style="font-size:40px"><u>
         Kitchen Duty</u></span> 
         <div border="5" class="table content" id="tableOfContents3">
-          <ol>
-            <li>KKK</li>
+          <ol style="font-size: 40px">
+            <li>Cooking responsibilities: </li>
               <ul>
-                <li>KyawKyaw</li>
-                <li>AyeAye</li>
-              </ul>
-            <li>LLL</li>
-              <ul>
-                <li>Naw Naw</li>
-                <li>KaungKaung</li>
+                <li>Ko Saw Phyo</li>
+                <li>Olivia Lian</li>
+                <li>Lianta</li>
               </ul>
           </ol>
     </div>
