Changing the location of details

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <tbody>
         <tr>
           <td>10:00 - 19:00</td>
-          <td onclick="toggleContent4()" id="jk"><u>Arriving + Registration + Dinner</u></td>
+          <td onclick="toggleContent4()" id="jk"><u>Arriving + Registration + Dinner</u>
           <div border="5" class="table content" id="tableOfContents4">
             <ol>
               <li style="font-size: 40px">Arriving: "If you need to be picked up from the airport, bus stop, or station, please call the available person listed below."</li>
@@ -55,11 +55,12 @@
                 </ul>
             </ol>
           </div>
+          </td>
         </tr>
 
         <tr>
           <td>19:00 - 21:00</td>
-          <td onclick="toggleContent()" id="jk"><u>Worship</u></td>
+          <td onclick="toggleContent()" id="jk"><u>Worship</u>
             <div border="5" class="table content" id="tableOfContents">
               <ol style="font-size: 40px">
                 <li>Music</li>
@@ -82,12 +83,12 @@
                   </ul>
               </ol>
             </div>
-          
+          </td>
         </tr>
 
         <tr>
           <td>21:00 - 06:00</td>
-          <td onclick="toggleContent1()" id="jk"><u>Bed Time</u></td>
+          <td onclick="toggleContent1()" id="jk"><u>Bed Time</u>
           <div border="5" class="table content" id="tableOfContents1">
             <ol style="font-size: 40px">
               <li>KKK</li>
@@ -102,12 +103,13 @@
                 </ul>
             </ol>
           </div>
+          </td>
         </tr>
 
       </tbody>
     </table>
     <span onclick="toggleContent2()"  id="jk" style="font-size:40px"><u>
-      Cleaning Duty</u></span> 
+      Cleaning Duty</u> 
       <div border="5" class="table content" id="tableOfContents2">
             <ol style="font-size: 40px">
               <li>For today's cleaning, whatever it may be:</li>
@@ -116,6 +118,7 @@
                 </ul>
             </ol>
       </div>
+    </span>
     <span onclick="toggleContent3()" id="jk" style="font-size:40px"><u>
         Kitchen Duty</u></span> 
         <div border="5" class="table content" id="tableOfContents3">
