--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
   </div>
   
   <!-- Anihna -->
+  <div >
+    <span id="di">Last Updates: June 6, 2023</span> <br><br>
+    <span id="di">Praise & Worship Leader: Dawn Lu San & TuangKhek</span><br>
+    <span id="di">Music Players: Band A & Band B</span><br>
+    <span id="di">Social Game Leader: Fridensau Students (Germany)</span><br>
+    <span id="di">The temporary songbook will be printed by Niang (Denmark)</span><br>
+    <span id="di">Children aged 0 - 7 will be led by: Mang Nu (UK), Niang (DK), Nau Niang (NO)</span><br>
+    <span id="di">Children aged 8 - 15 will be led by: Magne Ludvigsen, Saw Khatlulay</span><br>
+    <span id="di">N.B! You can click on the underlined word to see the details of each program.</span>
+</div>
+
   <div>
     <table border="1" width="50%" class="monday">
       <thead>
@@ -31,7 +42,7 @@
       </thead>
       <tbody>
         <tr>
-          <td>10:00 - 19:00</td>
+          <td>10:00 - 18:00</td>
           <td onclick="toggleContent4()" id="jk"><u>Arriving + Registration + Dinner</u>
           <div border="5" class="table content" id="tableOfContents4">
             <ol>
@@ -59,23 +70,21 @@
         </tr>
 
         <tr>
-          <td>19:00 - 21:00</td>
+          <td>18:00 - 20:00</td>
           <td onclick="toggleContent()" id="jk"><u>Worship</u>
             <div border="5" class="table content" id="tableOfContents">
               <ol style="font-size: 40px">
-                <li>Music</li>
+                <li>Music Player</li>
                   <ul>
-                    <li>KyawKyaw</li>
-                    <li>AyeAye</li>
+                    <li>Band A</li>
                   </ul>
                 <li>P&W</li>
                   <ul>
-                    <li>Naw Naw</li>
-                    <li>KaungKaung</li>
+                    <li>P&W leader will arrange further</li>
                   </ul>
                 <li>Chairman</li>
                   <ul>
-                    <li>KhaiKhai</li>
+                    <li>Didn't discuss yet</li>
                   </ul>
                 <li>Speaker</li>
                   <ul>
@@ -85,21 +94,18 @@
             </div>
           </td>
         </tr>
-
+        <tr>
+          <td>20:00 - 21:00</td>
+          <td>Social Game</td>
+        </tr>
         <tr>
           <td>21:00 - 06:00</td>
           <td onclick="toggleContent1()" id="jk"><u>Bed Time</u>
           <div border="5" class="table content" id="tableOfContents1">
             <ol style="font-size: 40px">
-              <li>KKK</li>
+              <li>Sleeping place:</li>
                 <ul>
-                  <li>KyawKyaw</li>
-                  <li>AyeAye</li>
-                </ul>
-              <li>LLL</li>
-                <ul>
-                  <li>Naw Naw</li>
-                  <li>KaungKaung</li>
+                  <li>Søholtvej 10, 9750 Østervrå</li>
                 </ul>
             </ol>
           </div>
@@ -159,7 +165,7 @@
         </tr>
         <tr>
           <td>09:00 - 10:30</td>
-          <td class="text">Study with Pr Kham Bawi</td>
+          <td class="text">Study / Youth in different classes</td>
         </tr>
         <tr>
           <td>10:30 - 10:45</td>
@@ -179,7 +185,7 @@
         </tr>
         <tr>
           <td>15:00 - 17:00</td>
-          <td class="text">Sosial Activities, Sport, & Shower</td>
+          <td class="text">Social Activities, Sport, & Shower</td>
         </tr>
         <tr>
           <td>17:00 - 18:00</td>
@@ -199,7 +205,10 @@
         </tr>
       </tbody>
     </table>
-    <a href="#one">Worship Plan</a>
+    <span  id="jk" style="font-size:40px">
+      Cleaning Duty</span>
+    <span  id="jk" style="font-size:40px">
+        Kitchen Duty</span>
   </div>
   
    <div >
@@ -228,7 +237,7 @@
         </tr>
         <tr>
           <td>09:00 - 10:30</td>
-          <td class="text">Study with Pr Kham Bawi</td>
+          <td class="text">Study / Youth in different classes</td>
         </tr>
         <tr>
           <td>10:30 - 10:45</td>
@@ -248,7 +257,7 @@
         </tr>
         <tr>
           <td>15:00 - 17:00</td>
-          <td class="text">Sosial Activities, Sport, & Shower</td>
+          <td class="text">Social Activities, Sport, & Shower</td>
         </tr>
         <tr>
           <td>17:00 - 18:00</td>
@@ -268,7 +277,10 @@
         </tr>
       </tbody>
     </table>
-    <a href="#one">Worship Plan</a>
+    <span  id="jk" style="font-size:40px">
+      Cleaning Duty</span>
+    <span  id="jk" style="font-size:40px">
+        Kitchen Duty</span>
   </div>
   
    <div >
@@ -329,7 +341,7 @@
         </tr>
         <tr>
           <td>19:00 - 21:00</td>
-          <td class="text">Sosial Game, Worship</td>
+          <td class="text">Social Game, Worship</td>
         </tr>
         <tr>
           <td>21:00 - 06:00</td>
@@ -337,7 +349,10 @@
         </tr>
       </tbody>
     </table>
-    <a href="#one">Worship Plan</a>
+    <span  id="jk" style="font-size:40px">
+      Cleaning Duty</span>
+    <span  id="jk" style="font-size:40px">
+        Kitchen Duty</span>
   </div>
   
    <div >
@@ -366,7 +381,10 @@
         </tr>
       </tbody>
     </table>
-    <a href="#one">Worship Plan</a>
+    <span  id="jk" style="font-size:40px">
+      Cleaning Duty</span>
+    <span  id="jk" style="font-size:40px">
+        Kitchen Duty</span>
   </div>
   
 </body>
