--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   
   <!-- Anihna -->
   <div >
-    <span id="di">Last Updates: June 6, 2023</span> <br><br>
+    <span id="di">Last Updates: June 6, 2023</span> <br>
+    <span id="di"><a href="https://www.facebook.com/lyan.swan.75">Contact Us</a></span><br><br>
     <span id="di">Praise & Worship Leader: Dawn Lu San & TuangKhek</span><br>
     <span id="di">Music Players: <a onClick="toggleContent5()" id ="jk"><u>Band A & </u></a>
       <div border="5" class="table content" id="tableOfContents5">
