--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <ul style="font-size: 40px">
               <li>Dal     : Bass </li>
               <li>Thangpi : Keyboard</li>
-              <li>Cia Mang: Drum</li>
+              <li>Mang: Drum</li>
               <li>Tun No  : Guitar</li>
               <li>We can add more volunteer... <a href="https://www.facebook.com/lyan.swan.75"><u>Please contact us</u></a></li>
             </ul> 
@@ -77,7 +77,7 @@
                 <ul style="font-size: 40px">
                   <li>Dal     : +45....</li>
                   <li>Niang   : +4542410324</li>
-                  <li>Cia Mang: +4542363455</li>
+                  <li>Mang: +4542363455</li>
                   <li>Tun No  : +4792542164</li>
                 </ul> <br><br><br>
               <li style="font-size: 40px">Registration place</li>
