--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <ol>
               <li style="font-size: 40px">Arriving: "If you need to be picked up from the airport, bus stop, or station, please call the available person listed below."</li>
                 <ul style="font-size: 40px">
-                  <li>Dal     : +45....</li>
+                  <li>Dal     : +45 ....</li>
                   <li>Niang   : +4542410324</li>
                   <li>Mang: +4542363455</li>
                   <li>Tun No  : +4792542164</li>
@@ -161,6 +161,7 @@
                 <li>Ko Saw Phyo</li>
                 <li>Olivia Lian</li>
                 <li>Lianta</li>
+                <li>U Muani/TidarOo</li>
               </ul>
           </ol>
     </div>
